compeleted evangelist page design

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Follow</title>
 
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="../static/index.css">
 </head>
 <body>
 
     <div class="container">
         <div class="button">   
-            <a href="/add_evangelist">
+            <a href="/evangelist">
                 <button>Evangelists</button>
             </a>
         </div>
