--- a/templates/evangelist.html
+++ b/templates/evangelist.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div style="display: flex; align-items: center; flex-direction: column; gap: 5vh">
             <h3 style="color: green; text-align: center;">ADD EVANGELIST</h3>
-            <form action="/evangelist_list" method="post">
+            <form action="/evangelist" method="post">
                 
                 <div>
                     <input name="name" type="text" placeholder="full name" style="display: block;">
