--- a/templates/new_work.html
+++ b/templates/new_work.html
@@ -20,8 +20,15 @@
             color: green;
         }
 
-        input[ type ="text"],input[ type = "number"]{
-            width: 31%
+        input[ type ="text"]{
+            width: 35%
+        }
+        input[ type = "number"]{
+            width: 15%;
+        }
+
+        .select_age{
+            width: 15%;
         }
 
         input[type="text"]::placeholder{
@@ -72,7 +79,7 @@
                     {% for evangelist in evangelists %}
                     <option value="{{ evangelist['id'] }}">{{ evangelist['name'] }}</option>
                     {% endfor %}
-                    
+
                 </select>
                 
             
@@ -82,6 +89,11 @@
                 <input type="text" name="name_0" placeholder="name">
                 <input type="number" name="age_0" placeholder="age">
                 <input type="text" name="address_0" placeholder="address">
+                <select name="gender_0">
+                    <option disabled selected>Gender</option>
+                    <option value="M">Male</option>
+                    <option value="F">Female</option>
+                </select>
             </div>
 
             <div style="order: 1;margin-left: auto;" class="form_elements" >
@@ -111,6 +123,11 @@
                 <input type="text" name="name_${form_count}" placeholder="name">
                 <input type="number" name="age_${form_count}" placeholder="age">
                 <input type="text" name="address_${form_count}" placeholder="address">
+                <select name="gender_${form_count}">
+                    <option disabled selected>Gender</option>
+                    <option value="M">Male</option>
+                    <option value="F">Female</option>
+                </select>
             `
             divElement.classList.add("form_elements");
             console.log(foo);
