kind of completed the backend

--- a/templates/evangelist_list.html
+++ b/templates/evangelist_list.html
@@ -21,7 +21,7 @@
 		<td>{{ res["name"] }}</td>
 		<td>{{ res["age"] }}</td>
 		<td>{{ res["gender"] }}</td>
-		<td>{{ res["last active"] }}</td>
+		<td>{{ res["last_active"] }}</td>
         <td>
             <form action="/single_evangelist_work" method="get">
                 <input type="hidden" name="id" value="{{res["id"]}}">
