--- a/templates/evangelist_list.html
+++ b/templates/evangelist_list.html
@@ -3,33 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Evangelist List</title>
+    <title>Evangelist_list</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
-<body style="width: 100%; height: 100vh; display: flex; align-items: center; justify-content: center;">
-    <table>
-        <tr>
-            <th>id</th>
-            <th>name</th>
-            <th>age</th>
-            <th>gender</th>
-            <th>last active</th>
-        </tr>
+<body>
+    <table class="table table-hover table-sm" style="width: 100%">
+        <thead>
+          <tr class="bg-success text-white">
+            <th scope="col-2">Id</th>
+            <th scope="col-4">Name</th>
+            <th scope="col-2">Age</th>
+            <th scope="col-4">Last Active</th>
+          </tr>
+        </thead>
+        <tbody>
+       	{% for res in result %}
+            <tr>
+                <td>{{ res["id"] }}</td>
+                <td>
+                    <a href="/single_evangelist_work?id={{ res["id"]}}">
+                    {{ res["name"] }}
+                    </a>
+                </td>
+                <td>{{ res["age"] }}</td>
+                <td>{{ res["last_active"] }}</td>
+            </tr>
+	    {% endfor %} 
+        </tbody>
 
-	{% for res in result %}
-	<tr>
-		<td>{{ res["id"] }}</td>
-		<td>{{ res["name"] }}</td>
-		<td>{{ res["age"] }}</td>
-		<td>{{ res["gender"] }}</td>
-		<td>{{ res["last_active"] }}</td>
-        <td>
-            <form action="/single_evangelist_work" method="get">
-                <input type="hidden" name="id" value="{{res["id"]}}">
-                <input type="submit" value="View Work">
-            </form>
-        </td>
-	</tr>
-	{% endfor %}
-    </table>
+      </table>
+    
+
+
+
+    
+    
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 </body>
 </html>
