--- a/templates/evangelist_list.html
+++ b/templates/evangelist_list.html
@@ -10,10 +10,10 @@
     <table class="table table-hover table-sm" style="width: 100%">
         <thead>
           <tr class="bg-success text-white">
-            <th scope="col-2">Id</th>
-            <th scope="col-4">Name</th>
-            <th scope="col-2">Age</th>
-            <th scope="col-4">Last Active</th>
+            <th scope="col">Id</th>
+            <th scope="col">Name</th>
+            <th scope="col">Age</th>
+            <th scope="col">Last Active</th>
           </tr>
         </thead>
         <tbody>
