--- a/templates/current_status.html
+++ b/templates/current_status.html
@@ -4,52 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Current Status</title>
-    <style>
-        th,td{
-            text-align: center;
-            padding: 5px;
-            border: solid green 1px;
-            background-color: white;
-        }
 
-        table{
-            border: solid green 3px;
-            background-color: green;
-        }
-
-        .none{
-            background-color: white;
-            border: none;
-        }
-    </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    
 </head>
-<body style="width: 100%; height: 100vh; display: flex; align-items: center; justify-content: center; flex-direction: column;">
+<body>
 
-    <h3>Nellikuzhi Fellowship</h3>
-    <table>
-        <tr>
-            <th>EVANGELIST</th>
-            <th>CONTACT</th>
-            <th>AGE</th>
-            <th>ADDRESS</th>
-            <th>LASTCONNECT</th>
-            <th class="none"></th>
+    <h3 class="text-success text-center font-weight-bold">Nellikuzhi Fellowship</h3>
+
+    <table class="table table-hover table-sm" style="width: 100%">
+        <thead>
+        <tr class="bg-success text-white">
+            <th scope="col">Evangelist</th>
+            <th scope="col">Contact</th>
+            <th scope="col">Age</th>
+            <th scope="col">Address</th>
+            <th scope="col">Last Connect</th>
         </tr>
+        </thead>
+        <tbody>
+        {% if rows %}        
+            {% for row in rows %}
+                <tr>
+                    <td><a href="/single_evangelist_work?id={{ row["eid"]}}">{{ row["ename"] }}</a></td>
+                    <td>{{ row["cname"] }}</td>
+                    <td>{{ row["cage"] }}</td>
+                    <td>{{ row["address"] }}</td>
+                    <td>{{ row["last_contacted"] }}</td>
+                </tr>
+            {% endfor %}
+            
+        {% else %}
+            <tr>
+                <td colspan="5">
+                    <h5 class="text-center text-muted">No recorded work</h5>
+                </td>
+            </tr>
+        {% endif %}
 
-	{% for row in rows %}
-	<tr>
-        <td>{{ row["ename"] }}</td>
-		<td>{{ row["cname"] }}</td>
-		<td>{{ row["cage"] }}</td>
-        <td>{{ row["address"] }}</td>
-        <td>{{ row["last_contacted"] }}</td>
-        <td class="none">
-            <form action="/single_evangelist_work" method="get">
-                <input type="hidden" name="id" value="{{ row["cid"]}}">
-                <input type="submit" value="View Work">
-            </form>
-        </td>
-	</tr>
-	{% endfor %}
+        </tbody>
     </table>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+    </body>
 </html>
